syntax = "proto3";

package chat.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Jasspie/real-time-chat-app-v2/chat/v1";;

message Msg {
  google.protobuf.Timestamp timestamp = 1;
  string content = 2;
  string user_name = 3;
  string room_name = 4;
}

message NewChatSessionRequest {
  string user_name = 1;
  string room_name = 2;
}

message NewChatSessionResponse {
  Msg msg = 1;
}

message BroadcastChatRequest {
  Msg msg = 1;
}

message BroadcastChatResponse {}

service ChatService {
  rpc NewChatSession(NewChatSessionRequest) returns (stream NewChatSessionResponse);
  rpc BroadcastChat(BroadcastChatRequest) returns (BroadcastChatResponse);
}